Added keywords to package.json

--- a/package.json
+++ b/package.json
@@ -12,5 +12,6 @@
 		"url": "https://idontknow/todo.git"
 	},
 	"author": "Gerben Claes",
-	"description": "A project used for the API & Microservices excercise of Free Code Camp"
+	"description": "A project used for the API & Microservices excercise of Free Code Camp",
+	"keywords": ["freecodecamp", "API-excercise"]
 }
