--- a/package.json
+++ b/package.json
@@ -13,5 +13,6 @@
 	},
 	"author": "Gerben Claes",
 	"description": "A project used for the API & Microservices excercise of Free Code Camp",
-	"keywords": ["freecodecamp", "API-excercise"]
+	"keywords": ["freecodecamp", "API-excercise"],
+	"license": "MIT"
 }
