--- a/package.json
+++ b/package.json
@@ -14,5 +14,6 @@
 	"author": "Gerben Claes",
 	"description": "A project used for the API & Microservices excercise of Free Code Camp",
 	"keywords": ["freecodecamp", "API-excercise"],
-	"license": "MIT"
+	"license": "MIT",
+	"version": "1.0.1"
 }
