--- a/package.json
+++ b/package.json
@@ -1,8 +1,8 @@
 {
 	"name": "fcc-learn-npm-package-json",
 	"dependencies": {
-		"package-name": "moment",
-		"express": "2.14.0"
+		"moment": "2.10.2",
+		"express": "^4.14.0"
 	},
 	"main": "server.js",
 	"scripts": {
